# Sauron

./: .gitignore  CMakeLists.txt  README.md
src/eye/: activity_sampler.cpp  activity_sampler.h  eye.rc  main.cpp  timestamp.h
